--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.12.2",
     "jest": "^30.1.3",
     "jest-environment-jsdom": "^30.1.2",
+    "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
